--- a/index.html
+++ b/index.html
@@ -419,8 +419,8 @@
 			<img src="images/clients/mis-client-02.png" class="img-responsive" alt="Clients">
 			<img src="images/clients/mis-client-03.png" class="img-responsive" alt="Clients">
 			<img src="images/clients/mis-client-04.png" class="img-responsive" alt="Clients">
-			<img src="images/clients/mis-client-05.png" class="img-responsive" alt="Clients">
-			<img src="images/clients/mis-client-06.png" class="img-responsive" alt="Clients">
+			<img src="images/clients/mis-client-05.jpg" class="img-responsive" alt="Clients">
+			<img src="images/clients/mis-client-06.jpg" class="img-responsive" alt="Clients">
 		</div>
 	</div>
 </div>
