--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Mutex Software Innovations</title>
-        <meta name="description" content="Mutex Software Innovations is a boutique digital transformation consultancy and software development company that specializes in providing cutting-edge engineering solutions. ">
+        <meta name="description" content="We are a boutique digital transformation consultancy and software development company that provides cutting-edge engineering solutions.">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="theme-color" content="#1171b8">
